logica de actilizar al votar

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -26,7 +26,7 @@
     </div>
 
     <!-- Buscador -->
-    <app-search></app-search>
+    <app-search (voteCasted)="onVoteCasted()"></app-search>
 
     <!-- Lista de votación -->
     <app-voting-list></app-voting-list>
